# search-rs

./: Cargo.toml
schema-derive/: Cargo.toml
schema-derive/src/: lib.rs  schema.rs
search/: Cargo.toml
search/examples/: e2e.rs  query.rs
search/src/: engine.rs  lib.rs  prelude.rs  schema.rs  traits.rs
