[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
schema-derive = { version = "0.1.0", path = "../schema-derive" }
stopwords = "0.1.1"
thiserror = "1.0.61"
xapian-rs = { version = "0.3.0" }

[dev-dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
